# the_system_project

./: .$Database_diagrams.drawio.bkp  .gitignore  CMakeLists.txt  Database_diagrams.drawio  Doxyfile  README.md  conanfile.txt  main.cpp
documentation/: .$Database_diagrams.drawio.dtmp  Database_diagrams.drawio
src/: main.cpp
src/application/: application_manager.cpp  application_manager.h  application_manager_interface.h
src/application/dto/: employe_dto.h  employee_dto.h  login_dto.h  timesheet_dto.h  user_dto.h
src/application/dto_mappers/employee_dto_mapper/: employee_dto_mapper.cpp  employee_dto_mapper.h  employee_dto_mapper_interface.h
src/application/factorys/: shop_service_factory_interface.h  timesheet_service_factory_interface.h  uow_factory_interface.h  user_service_factory_interface.h
src/application/uow/: uow_interface.h
src/domain/entities/: employee.h  user.h  vacation.h  work_shedule.h
src/domain/value_data/: timesheet_data.h  types.h
src/infrastructure/connection_pool/: connection_pool.cpp  connection_pool.h  querys.h
src/infrastructure/http_server/: http_server.cpp  http_server.h
src/infrastructure/json_formater/: json_formater.cpp  json_loader.cpp  json_loader.h
src/infrastructure/logger/: logger.cpp  logger.h
src/infrastructure/persistence/: authorizer.h
src/infrastructure/token_manager/: token_manager.cpp  token_manager.h
src/infrastructure/uow/: uow.h
src/infrastructure/uow_impl/: uow_impl.cpp  uow_impl.h
src/infrastructure/url_decoder/: url_decoder.cpp  url_decoder.h
src/utils/: tagged.h
(+55 files in other folders)
