# cmake_minimum_required(VERSION 3.11)
# project(the_system CXX)

# set(CMAKE_CXX_STANDARD 20)
# set(THREADS_PREFER_PTHREAD_FLAG ON)

# find_package(OpenSSL REQUIRED)

# add_executable(the_system main.cpp)

# target_include_directories(the_system PRIVATE include)



# target_link_libraries(the_system PRIVATE OpenSSL::Crypto OpenSSL::SSL)